tests/negative/test_attr_type_no_type.orb
fnc main () () {
    +:sym 0;
};